[tool.poetry]
name = "todoist"
version = "0.1.0"
description = "Minha versão de um Kanban!"
authors = ["Marcus T."]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
